--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <!-- Google Fonts: Playfair Display + Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
+  <link rel="icon" type="image/x-icon" href="images/favicon.png" />
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="antialiased text-gray-900 bg-cream">
@@ -21,7 +23,7 @@
       <div class="flex items-center justify-between h-13">
         <!-- Logo Banner -->
         <a href="#hero" class="flex items-center space-x-3">
-          <img src="images/marci-logo.jpg" alt="Marci Metzger Logo" class="h-10 md:h-12 object-contain">
+          <img src="images/marci-logo.png" alt="Marci Metzger Logo" class="h-10 md:h-12 object-contain">
         </a>
 
         <!-- Navigation Links -->
